--- a/portfolio.html
+++ b/portfolio.html
@@ -37,14 +37,14 @@
           </div>
         </div>
 
-        <div class="container mt-5">
+        <div class="container mt-5 pl-5">
             <div class="row">
                 <div class= "col-7 bg-white">
                         <h2 class="text-info">Portfolio</h2>
                         <br>
-                    <img src="assets/images/pic-1.jpg" class="pb-5"> 
+                    <img src="assets/images/pic-1.jpg" class="pb-5 mr-5"> 
                     <img src="assets/images/pic 2.jpg" class="pb-5">
-                    <img src="assets/images/pic-3.jpg" class="pb-5">
+                    <img src="assets/images/pic-3.jpg" class="pb-5 mr-5">
                     <img src="assets/images/pic-4.jpg" class="pb-5">
                     <img src="assets/images/pic 5.jpg">
                   
